# explore-blending

./: .gitignore  Makefile  README.md  jest.config.js  manifest.lkml  manifest.local.lkml  package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.dev.js  webpack.develop.js
.cursor/rules/: ui-components.mdc
.github/workflows/: main.yml  release.yml  test.yml
blend_api/: Dockerfile  Makefile  index.tsx  main.py  models.py  pyproject.toml  requirements.txt
blend_api/functions/: get_access_grant.py  github_commit_and_deploy.py  update_user_attributes.py  utils.py
blend_api/tests/: test_date_types.py  test_main.py  test_model_secrets.py
scripts/: generate-entitlements.ts
src/: App.tsx  AppContext.tsx  HelloWorld.tsx  Main.tsx  SettingsContext.tsx  UserAttributeUpdater.tsx  constants.ts  entitlements.ts  guide.md  index.tsx  types.d.ts  utils.ts
src/Blend/: AllJoins.tsx  BlendButton.tsx  BlendDialog.tsx  Context.tsx  JoinCondition.tsx  NewExplore.tsx  NoQueries.tsx  QueryList.tsx  ResetButton.tsx  SeeSqlDialog.tsx  index.tsx
src/Blend/BlendButton/: BlendButtonContext.tsx  (+3 more)
src/Blended/: Context.tsx  DashboardSearch.tsx  EmbedExplore.tsx  SidebarItems.tsx  index.tsx
src/Config/: index.tsx
src/Settings/: CachedModelConnectionPopover.tsx  index.tsx
src/components/: CopyClipboard.tsx  EmbedContainer.tsx  LkrLoading.tsx  ProgressButton.tsx
src/hooks/: useJoinFields.tsx  useSearchParams.tsx
src/utils/: artifacts.ts  dynamicFields.ts  explore_label.ts  funPhrases.ts  getBlend.ts  getPDTMeta.ts  getSQL.ts  index.ts  updateUserAttributes.ts
(+25 files in other folders)
